# hobot

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  hobot.bat
.cargo/: config.toml
alta/: guide_260218.md
alta/prompt/: codebook.md  debugging.md  workflow.md
alta/stage_2_result/: import.xml
alta/trash/: projection_mapping_old.md  test.md  workflow.md
doc/old_prompt/: capture_javascript_project.md  capture_rust_project.md  prompt_on_work_with_hobot.md
doc/tech_spec/: extension_tech_spec.md  general_tech_spec.md  protocol.md  todo.md  user_guide.md
install/: hobot.bat  hobot.bat.example  install_host.bat  manifest.json  uninstall_host.bat
prompt/: commenting_style.md  communication_style.md  hobot_commands.md  load_hobot_agent.md  load_hobot_extension.md  prompt_hobot_prompt.md  prompt_hobot_ui_prompt.md  prompt_on_hobot.md  start_work_on_hobot_agent.md  start_work_on_hobot_extension.md
src/: agent.rs  glob.rs  handler.rs  library.rs  main.rs  test_main_test.rs
src/agent/: request.rs  test_agent_test.rs
src/glob/: config.rs  error_control.rs  log_control.rs  stdout_sink.rs
src/handler/: file.rs  handler_test_utils.rs  keyboard_and_text.rs  misc_tool.rs  mouse.rs  screenshot.rs  shell.rs  win_control.rs
web_extension/: ai_input_manager.js  background.js  content.js  directive_extractor.js  focus_manager.js  glob.js  hobot_bridge.js  manifest.json  popup.html  popup.js  text_processor.js  text_processor_old.js
web_extension/background/: background.js  connection_manager.js  extension_icon_control.js  tab_hobot_state.js  (+3 more)
(+246 files in other folders)
