[package]
name = "hobot"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
regex = "1"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_HiDpi", "Win32_System", "Win32_System_DataExchange", 
    "Win32_System_Memory", "Win32_System_Ole", "Win32_System_Threading", "Win32_System_LibraryLoader", 
    "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_Shell", "Win32_System_SystemInformation"] }
xcap = "0.8.1"      # Для захвата экрана/окон
arboard = "3.6.1"
chrono = "0.4.43"